--- a/home.html
+++ b/home.html
@@ -27,13 +27,18 @@
 -->
 		
 		<div class="indicator">
+				<p id="nodename">test</p>
+				<div id="login">
+					<span class="label label-info" id="email">Log as:</span>
+			
+				</div>
 				<div class="droppable"  id="bin"  title="Click Me I'm hide ">
 	
 				</div>
 			<div id="devices" >
 						
 				<p class="allign">No of devices:
-				<span class="label label-success">Success Label</span>
+				<span class="label label-success">Present Status :</span>
 				<span class="label label-info">Info Label</span>
 				<span class="label label-warning">Warning Label</span>
 				<span class="label label-danger">Danger Label</span>
@@ -44,7 +49,7 @@
 			<div id="nodes" >
 			<p  class="allign">No of Nodes:
 			
-			<span class="label label-success">Success Label</span>
+			<span class="label label-success">Success Level</span>
 			<span class="label label-info">Info Label</span>
 			<span class="label label-warning">Warning Label</span>
 			<span class="label label-danger">Danger Label</span>
